deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 648922908113.dkr.ecr.us-east-1.amazonaws.com/housewell-nextjs-web:1.2.0
        ports:
        - containerPort: 3000
