ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:648922908113:certificate/4e70f8d1-f7cc-4304-81b2-5a41a8ea266f
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.www-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Host": "housewell.com", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: housewell.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 443
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: api-server-service
                port:
                  number: 443 
    - host: www.housewell.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-redirect
                port:
                  name: use-annotation
